feat : Add support for internationalization with support for amharic

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -263,3 +263,9 @@ openhmis.cashier.report.generate.excel=As Excel
 openhmis.cashier.report.generate.pdf=As PDF
 openhmis.cashier.report.error.beginAndEndDate=You must select a begin and end date to generate the report.
 openhmis.cashier.report.error.selectReport=You must select a report.
+
+# Currency
+openhmis.cashier.currency.symbol=Ksh
+openhmis.cashier.currency.code=KES
+openhmis.cashier.currency.name=Kenyan Shilling
+openhmis.cashier.currency.format=#,##0.00
